--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 language: java
-
+dist: trusty
 jdk:
   - oraclejdk8
 
@@ -18,5 +18,3 @@ branches:
 cache:
   directories:
   - $HOME/.m2
-
-
