--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.ipinfo</groupId>
     <artifactId>ipinfo-api</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -43,15 +43,15 @@
 
     <developers>
         <developer>
-            <id>aaomidi</id>
-            <name>Amir Omidi</name>
-            <email>amir@ipinfo.io</email>
-            <organization>IPinfo</organization>
-        </developer>
-        <developer>
             <id>ipinfo</id>
             <name>IPinfo</name>
             <email>support@ipinfo.io</email>
+            <organization>IPinfo</organization>
+        </developer>
+        <developer>
+            <id>aaomidi</id>
+            <name>Amir Omidi</name>
+            <email>amir@ipinfo.io</email>
             <organization>IPinfo</organization>
         </developer>
     </developers>
