--- a/.github/workflows/cd_maven.yml
+++ b/.github/workflows/cd_maven.yml
@@ -2,7 +2,7 @@ name: Publish package to the Maven Central Repository
 on:
   push:
     tags:
-      - 'v*'
+      - 'ipinfo-*'
 jobs:
   publish:
     runs-on: ubuntu-latest
