--- a/.github/workflows/cd_maven.yml
+++ b/.github/workflows/cd_maven.yml
@@ -13,8 +13,16 @@ jobs:
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+      - name: Install gpg secret key
+        run: |
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          gpg --list-secret-keys --keyid-format LONG
       - name: Publish package
-        run: mvn --batch-mode clean source:jar javadoc:jar deploy
+        run: |
+          mvn \
+            --batch-mode \
+            -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
+            clean source:jar javadoc:jar deploy
         env:
           IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
